added header fixes